fix:alignment

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -92,11 +92,11 @@
 
 @media screen and (max-width: 480px) {
   .i {
+    margin-top: 20%;
     flex-direction: column;
   }
 
   .i-left-wrapper {
-  
     padding: 10px;
     align-items: center;
     justify-content: center;
@@ -104,8 +104,7 @@
     height: 100%;
   }
 
-  .i-desc{
+  .i-desc {
     display: none;
   }
-  
 }
