--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 10vh;
-  padding: 20px;
+  padding: 1rem;
   position: fixed;
   top: 0;
   left: 0;
@@ -11,6 +11,7 @@
   right: 0;
   z-index: 999;
   background-color: white;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .left {
   flex: 1;
@@ -20,6 +21,7 @@
 }
 .name {
   font-size: 1.3rem;
+  color: black;
 }
 .right {
   display: flex;
@@ -39,6 +41,7 @@
   margin-right: 4rem;
   list-style-type: none;
   font-weight: 400;
+  color: black;
 }
 .navbarList > ul > li:hover {
   color: #59b256;
